[metadata]
name = thresh
version = 1.1.1
author = David Heineman
author_email = dheineman3@gatech.edu
description = Load and manage data collection with thresh.tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/davidheineman/thresh.tools
project_urls =
    Bug Tracker = https://github.com/davidheineman/thresh.tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pyyaml
    deepdiff

[options.packages.find]
where = src
